增强mybatis查询功能，引入spring data jpa思想，自实现算法查找关键字，当前提交的功能可以使用s\electByUserNameAndSex或者selectIdAndRealNameByUserName